General code cleanup and making sure to close streams etc